# DBusTestTask

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-format.json  conanfile.txt
include/: PermissionManager.h
include/common/: Permissions.h  Utils.h
include/services/: PermissionManager.h  TimeService.h
scripts/: build.sh  install_deps.sh
src/: PermissionManager.cpp  PermissionManagerWorker.cpp  Tester.cpp  TimeServiceWorker.cpp  main.cpp
src/common/: Utils.cpp
src/services/: PermissionManager.cpp  TimeService.cpp
